--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <section class="chamada">
         <div class="chamada-texto">
-            <h1>trabalho da amanda</h1>
+            <h1>trabalho da mafe</h1>
             <p>#homem-aranha</p>
         </div>
 
