--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section class="chamada">
         <div class="chamada-texto">
             <h1>trabalho da mafe</h1>
-            <p>#homem-aranha</p>
+            <p>#preciso de nota</p>
         </div>
 
         <div>
